--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         display: grid;
         grid-template-columns: 1fr 10fr 1fr;
         grid-template-rows: 1fr 10fr 1fr;
-        height: 100%;
+        height: 100vh;
       }
       #content {
         grid-column: 2 / 2;
         grid-row: 2 / 2;
+        height: 100vh;
       } 
       svg {
         width: 100%;
