--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         grid-template-rows: 1fr 10fr 1fr;
         height: 100vh;
       }
+      #header {
+        grid-column: 2 / 2;
+        grid-row: 1 / 1;
+        font-size: 1.5em;
+      }
       #content {
         grid-column: 2 / 2;
         grid-row: 2 / 2;
-        height: 100vh;
+        height: 90vh;
       } 
       svg {
         width: 100%;
@@ -28,7 +33,9 @@
 
   
     <main>
-      
+        <div id="header">
+          <b>I would you like to explore Colleges in the... <span class="region"></span></b>
+        </div>
         <div id="content"></div>
       
     </main>
