--- a/index.html
+++ b/index.html
@@ -1,45 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" type="text/css" href="css/college.css">
     <style>
-      html {
-        height: 100vh;
-      }
-      body {
-        height: inherit;
-      }
-      main { 
-        display: grid;
-        grid-template-columns: 1fr 10fr 1fr;
-        grid-template-rows: 1fr 10fr 1fr;
-        height: 100vh;
-      }
-      #header {
-        grid-column: 2 / 2;
-        grid-row: 1 / 1;
-        font-size: 1.5em;
-      }
-      #content {
-        grid-column: 2 / 2;
-        grid-row: 2 / 2;
-        height: 90vh;
-      } 
-      svg {
-        width: 100%;
-        height: 100%;
-      }
+      
     </style>
   </head>
 
   
-    <main>
+    <div class="screen1">
         <div id="header">
-          <b>I would you like to explore Colleges in the... <span class="region"></span></b>
+          <b>Build Your Rankings with Colleges in the... <span class="region"></span></b>
         </div>
-        <div id="content"></div>
+        <div class="content"></div>
       
-    </main>
+    </div>
  
-  <script src="js/d3.js"></script>
-  <script src="js/college.js"></script>
+  <script src="scripts/d3.js"></script>
+  <script src="scripts/college.js"></script>
 <html>
