svg transition working

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     </div>
  
   <script src="scripts/d3.js"></script>
+  <script src="data/college.json"></script>
   <script src="scripts/college.js"></script>
 <html>
