About to try a loader

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/college.css">
       <script src="scripts/bundle.js"></script>
     <style>
@@ -11,7 +12,7 @@
   
     <div class="screen1">
         <div id="header">
-          <b>Explore Colleges in the... <span class="region"></span></b>
+          <b>Click on the Region to Explore: <span class="region"></span></b>
         </div>
         <div class="content"></div>
       
