--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
     <div class="screen1">
         <div id="header">
-          <b>Click on the Region to Explore: <span class="region"></span></b>
+          <b>Click on a Region to Explore its Universities: <span class="region"></span></b>
         </div>
         <div class="content"></div>
       
